--- a/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -136,7 +136,7 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=360.000
@@ -961,4 +961,392 @@ SceneOutliner.TimeStamp=2020.12.06-23.07.24
 SceneOutliner.LastCompileMethod=Unknown
 HierarchicalLODOutliner.TimeStamp=2020.12.06-23.07.09
 HierarchicalLODOutliner.LastCompileMethod=Unknown
+
+[DetailCustomWidgetExpansion]
+CryptoKeysSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+GeneralProjectSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+GameplayTagsSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+GameMapsSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+MoviePlayerSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+ProjectPackagingSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+HardwareTargetingSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+AssetManagerSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+AssetToolsSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+AISystem=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+AnimationSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+AudioSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+ChaosSolverSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+CollisionProfile=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+ConsoleSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+CookerSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+CrowdManager=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+DebugCameraControllerSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+GameplayDebuggerConfig=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+GarbageCollectionSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+Engine=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+HierarchicalLODSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+InputSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+LandscapeSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+RecastNavMesh=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+NavigationSystemV1=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+NetworkSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+PhysicsSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+RendererSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+RendererOverrideSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+SlateSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+StreamingSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+TutorialSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+UserInterfaceSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+LevelEditor2DSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+EditorProjectAppearanceSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+BlueprintEditorProjectSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+ClassViewerProjectSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+ProxyLODMeshSimplificationSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+MovieSceneToolsProjectSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+MeshSimplificationSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+PaperImporterSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+SkeletalMeshSimplificationSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+StructViewerProjectSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+TextureImportSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+UMGEditorProjectSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+AndroidRuntimeSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+ShaderPlatformQualitySettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+AndroidSDKSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+IOSRuntimeSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+LinuxTargetSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+LuminRuntimeSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+MagicLeapSDKSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+WindowsTargetSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+AvfMediaSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+GooglePADRuntimeSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+ImgMediaSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+LevelSequenceEditorSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+MagicLeapSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+MagicLeapARPinSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+MoviePipelinePIEExecutorSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+MoviePipelineInProcessExecutorSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+MovieRenderPipelineProjectSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+NiagaraSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+NiagaraEditorSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+OculusHMDRuntimeSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+PaperRuntimeSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+SteamVREditorSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+TcpMessagingSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+TemplateSequenceEditorSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+UdpMessagingSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+WmfMediaSettings=InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,
+
+[DetailCategories]
+FirstPersonCharacter_C.TransformCommon=True
+FirstPersonCharacter_C.Animation=True
+FirstPersonCharacter_C.Mesh=True
+FirstPersonCharacter_C.Clothing=True
+FirstPersonCharacter_C.Physics=True
+FirstPersonCharacter_C.Collision=True
+FirstPersonCharacter_C.MasterPoseComponent=True
+FirstPersonCharacter_C.Lighting=True
+FirstPersonCharacter_C.ClothingSimulation=True
+FirstPersonCharacter_C.Rendering=True
+FirstPersonCharacter_C.SkinWeights=True
+FirstPersonCharacter_C.Navigation=True
+FirstPersonCharacter_C.VirtualTexture=True
+FirstPersonCharacter_C.Tags=True
+FirstPersonCharacter_C.Activation=True
+FirstPersonCharacter_C.Cooking=True
+FirstPersonCharacter_C.Character Movement (General Settings)=True
+FirstPersonCharacter_C.Character Movement: Walking=True
+FirstPersonCharacter_C.Character Movement: Jumping / Falling=True
+FirstPersonCharacter_C.Character Movement (Networking)=True
+FirstPersonCharacter_C.Character Movement: Swimming=True
+FirstPersonCharacter_C.Character Movement: Flying=True
+FirstPersonCharacter_C.Character Movement: Custom Movement=True
+FirstPersonCharacter_C.Character Movement (Rotation Settings)=True
+FirstPersonCharacter_C.Character Movement: Physics Interaction=True
+FirstPersonCharacter_C.Character Movement=True
+FirstPersonCharacter_C.Character Movement: Avoidance=True
+FirstPersonCharacter_C.RootMotion=True
+FirstPersonCharacter_C.Character Movement: NavMesh Movement=True
+FirstPersonCharacter_C.NavMovement=True
+FirstPersonCharacter_C.Velocity=True
+FirstPersonCharacter_C.PlanarMovement=True
+FirstPersonCharacter_C.MovementComponent=True
+FirstPersonCharacter_C.Shape=True
+FirstPersonCharacter_C.Character=True
+FirstPersonCharacter_C.Camera=True
+FirstPersonCharacter_C.Pawn=True
+FirstPersonCharacter_C.Replication=True
+FirstPersonCharacter_C.Input=True
+FirstPersonCharacter_C.Actor=True
+CryptoKeysSettings.Encryption=True
+CryptoKeysSettings.Signing=True
+GeneralProjectSettings.About=True
+GeneralProjectSettings.Publisher=True
+GeneralProjectSettings.Legal=True
+GeneralProjectSettings.Displayed=True
+GeneralProjectSettings.Settings=True
+GameplayTagsSettings.GameplayTags=True
+GameplayTagsSettings.Advanced Replication=True
+GameMapsSettings.DefaultModes=True
+GameMapsSettings.DefaultMaps=True
+GameMapsSettings.LocalMultiplayer=True
+GameMapsSettings.GameInstance=True
+MoviePlayerSettings.Movies=True
+ProjectPackagingSettings.Packaging=True
+ProjectPackagingSettings.Project=True
+ProjectPackagingSettings.Blueprints=True
+ProjectPackagingSettings.Prerequisites=True
+HardwareTargetingSettings.Target Hardware=True
+HardwareTargetingSettings.Pending Changes=True
+AssetManagerSettings.Asset Manager=True
+AssetManagerSettings.Redirects=True
+AssetToolsSettings.Asset Tools=True
+AISystem.AISystem=True
+AISystem.Movement=True
+AISystem.Gameplay Tasks=True
+AISystem.EQS=True
+AISystem.PerceptionSystem=True
+AnimationSettings.Compression=True
+AnimationSettings.Performance=True
+AudioSettings.Dialogue=True
+AudioSettings.Audio=True
+AudioSettings.Mix=True
+AudioSettings.Quality=True
+ChaosSolverSettings.GameInstance=True
+CollisionProfile.Object Channels=True
+CollisionProfile.Trace Channels=True
+ConsoleSettings.General=True
+ConsoleSettings.AutoComplete=True
+ConsoleSettings.Colors=True
+CookerSettings.Cooker=True
+CookerSettings.Textures=True
+CookerSettings.Editor=True
+CrowdManager.Config=True
+DebugCameraControllerSettings.General=True
+GameplayDebuggerConfig.Input=True
+GameplayDebuggerConfig.Display=True
+GameplayDebuggerConfig.AddOns=True
+GarbageCollectionSettings.General=True
+GarbageCollectionSettings.Optimization=True
+Engine.Fonts=True
+Engine.DefaultClasses=True
+Engine.DefaultMaterials=True
+Engine.Settings=True
+Engine.Subtitles=True
+Engine.Blueprints=True
+Engine.Anim Blueprints=True
+Engine.Framerate=True
+Engine.Timecode=True
+Engine.Screenshots=True
+HierarchicalLODSettings.HLODSystem=True
+InputSettings.Bindings=True
+InputSettings.ViewportProperties=True
+InputSettings.Mobile=True
+InputSettings.Virtual Keyboard (Mobile)=True
+InputSettings.Console=True
+LandscapeSettings.Layers=True
+RecastNavMesh.Display=True
+RecastNavMesh.Generation=True
+RecastNavMesh.Query=True
+RecastNavMesh.Runtime=True
+RecastNavMesh.Tick=True
+RecastNavMesh.Collision=True
+NavigationSystemV1.Navigation=True
+NavigationSystemV1.NavigationSystem=True
+NavigationSystemV1.Navigation Enforcing=True
+NavigationSystemV1.Agents=True
+NetworkSettings.libcurl=True
+NetworkSettings.World=True
+NetworkSettings.replication=True
+PhysicsSettings.Constants=True
+PhysicsSettings.Simulation=True
+PhysicsSettings.Replication=True
+PhysicsSettings.Optimization=True
+PhysicsSettings.Framerate=True
+PhysicsSettings.Broadphase=True
+PhysicsSettings.ChaosPhysics=True
+PhysicsSettings.Physical Surface=True
+RendererSettings.Mobile=True
+RendererSettings.Materials=True
+RendererSettings.Culling=True
+RendererSettings.Textures=True
+RendererSettings.VirtualTextures=True
+RendererSettings.Reflections=True
+RendererSettings.ForwardRenderer=True
+RendererSettings.Lighting=True
+RendererSettings.Tessellation=True
+RendererSettings.Translucency=True
+RendererSettings.Postprocessing=True
+RendererSettings.DefaultSettings=True
+RendererSettings.Optimizations=True
+RendererSettings.Debugging=True
+RendererSettings.VR=True
+RendererSettings.Experimental=True
+RendererSettings.Editor=True
+RendererSettings.RayTracing=True
+RendererSettings.ShaderPermutationReduction=True
+RendererSettings.MobileShaderPermutationReduction=True
+RendererOverrideSettings.ShaderPermutationReduction=True
+RendererOverrideSettings.Miscellaneous=True
+SlateSettings.ConstraintCanvas=True
+StreamingSettings.PackageStreaming=True
+StreamingSettings.LevelStreaming=True
+StreamingSettings.General=True
+StreamingSettings.Deprecated Settings=True
+TutorialSettings.Tutorials=True
+UserInterfaceSettings.Focus=True
+UserInterfaceSettings.Hardware Cursors=True
+UserInterfaceSettings.Software Cursors=True
+UserInterfaceSettings.DPI Scaling=True
+UserInterfaceSettings.Widgets=True
+LevelEditor2DSettings.General=True
+LevelEditor2DSettings.LayerSnapping=True
+EditorProjectAppearanceSettings.Units=True
+BlueprintEditorProjectSettings.Blueprints=True
+BlueprintEditorProjectSettings.Actors=True
+ClassViewerProjectSettings.ClassVisibilityManagement=True
+ProxyLODMeshSimplificationSettings.General=True
+MovieSceneToolsProjectSettings.Timeline=True
+MovieSceneToolsProjectSettings.Shots=True
+MovieSceneToolsProjectSettings.TrackSettings=True
+MeshSimplificationSettings.General=True
+PaperImporterSettings.NewAssetSettings=True
+PaperImporterSettings.ImportSettings=True
+PaperImporterSettings.MaterialSettings=True
+SkeletalMeshSimplificationSettings.General=True
+StructViewerProjectSettings.StructVisibilityManagement=True
+TextureImportSettings.VirtualTextures=True
+UMGEditorProjectSettings.Compiler=True
+UMGEditorProjectSettings.Class Filtering=True
+UMGEditorProjectSettings.Designer=True
+AndroidRuntimeSettings.APK Packaging=True
+AndroidRuntimeSettings.App Bundles=True
+AndroidRuntimeSettings.Build=True
+AndroidRuntimeSettings.Advanced APK Packaging=True
+AndroidRuntimeSettings.DistributionSigning=True
+AndroidRuntimeSettings.GooglePlayServices=True
+AndroidRuntimeSettings.Icons=True
+AndroidRuntimeSettings.LaunchImages=True
+AndroidRuntimeSettings.DaydreamAppTile=True
+AndroidRuntimeSettings.Input=True
+AndroidRuntimeSettings.GraphicsDebugger=True
+AndroidRuntimeSettings.Audio=True
+AndroidRuntimeSettings.MultiTextureFormats=True
+AndroidRuntimeSettings.TextureFormatPriorities=True
+ShaderPlatformQualitySettings.Forward Rendering Overrides=True
+AndroidSDKSettings.SDKConfig=True
+IOSRuntimeSettings.Mobile Provision=True
+IOSRuntimeSettings.BundleInformation=True
+IOSRuntimeSettings.Orientation=True
+IOSRuntimeSettings.Input=True
+IOSRuntimeSettings.FileSystem=True
+IOSRuntimeSettings.Rendering=True
+IOSRuntimeSettings.OS Info=True
+IOSRuntimeSettings.PowerUsage=True
+IOSRuntimeSettings.Devices=True
+IOSRuntimeSettings.Build=True
+IOSRuntimeSettings.Online=True
+IOSRuntimeSettings.Extra PList Data=True
+IOSRuntimeSettings.Required Icons=True
+IOSRuntimeSettings.Optional Icons=True
+IOSRuntimeSettings.LaunchScreen=True
+IOSRuntimeSettings.Audio=True
+LinuxTargetSettings.Targeted RHIs=True
+LinuxTargetSettings.Splash=True
+LinuxTargetSettings.Icon=True
+LinuxTargetSettings.Audio=True
+LuminRuntimeSettings.Audio=True
+LuminRuntimeSettings.MPK Packaging=True
+LuminRuntimeSettings.Runtime=True
+LuminRuntimeSettings.Magic Leap App Tile=True
+LuminRuntimeSettings.Distribution Signing=True
+LuminRuntimeSettings.Build=True
+LuminRuntimeSettings.Advanced MPK Packaging=True
+LuminRuntimeSettings.AdvancedBuild=True
+LuminRuntimeSettings.Rendering=True
+MagicLeapSDKSettings.SDKConfig=True
+WindowsTargetSettings.Targeted RHIs=True
+WindowsTargetSettings.Toolchain=True
+WindowsTargetSettings.OS Info=True
+WindowsTargetSettings.Splash=True
+WindowsTargetSettings.Icon=True
+WindowsTargetSettings.Audio=True
+AvfMediaSettings.Debug=True
+GooglePADRuntimeSettings.Packaging=True
+ImgMediaSettings.General=True
+ImgMediaSettings.Caching=True
+ImgMediaSettings.EXR=True
+ImgMediaSettings.Proxies=True
+LevelSequenceEditorSettings.Tracks=True
+LevelSequenceEditorSettings.Playback=True
+MagicLeapSettings.General=True
+MagicLeapARPinSettings.ARPin=True
+MoviePipelinePIEExecutorSettings.Startup=True
+MoviePipelineInProcessExecutorSettings.Startup=True
+MovieRenderPipelineProjectSettings.Movie Render Pipeline=True
+NiagaraSettings.Niagara=True
+NiagaraSettings.Scalability=True
+NiagaraEditorSettings.Niagara=True
+NiagaraEditorSettings.SimulationOptions=True
+OculusHMDRuntimeSettings.General Oculus=True
+OculusHMDRuntimeSettings.SplashScreen=True
+OculusHMDRuntimeSettings.PC=True
+OculusHMDRuntimeSettings.Mobile=True
+PaperRuntimeSettings.Experimental=True
+PaperRuntimeSettings.Settings=True
+SteamVREditorSettings.SteamVR Input=True
+SteamVREditorSettings.SteamVR Editor Settings=True
+TcpMessagingSettings.Transport=True
+UdpMessagingSettings.Transport=True
+UdpMessagingSettings.Tunnel=True
+WmfMediaSettings.Media=True
+WmfMediaSettings.Debug=True
+FirstPersonCharacter_C.Default=True
+FirstPersonCharacter_C.Tick=True
+K2Node_InputAction.Input=True
+CameraComponent.Variable=True
+CameraComponent.TransformCommon=True
+CameraComponent.Sockets=True
+CameraComponent.CameraSettings=True
+CameraComponent.CameraOptions=True
+CameraComponent.Camera=True
+CameraComponent.PostProcess=True
+CameraComponent.Tags=True
+CameraComponent.ComponentReplication=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+CameraComponent.Events=True
+CapsuleComponent.Variable=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Tags=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Cooking=True
+CapsuleComponent.Events=True
+BP_Sky_Sphere_C.TransformCommon=True
+BP_Sky_Sphere_C.Default=True
+BP_Sky_Sphere_C.Override settings=True
+BP_Sky_Sphere_C.Rendering=True
+BP_Sky_Sphere_C.Replication=True
+BP_Sky_Sphere_C.Collision=True
+BP_Sky_Sphere_C.Input=True
+BP_Sky_Sphere_C.Actor=True
+
+[DetailMultiObjectNodeExpansion]
+CryptoKeysSettings=True
+GeneralProjectSettings=True
+InputSettings=True
+
+[ContentBrowserRecent]
+MRUItem0=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+
+[AssetEditorToolkitTabLocation]
+/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
+
+[/Script/UnrealEd.BlueprintEditorOptions]
+bHideUnrelatedNodes=False
 
