--- a/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -138,6 +138,7 @@ LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=360.000
@@ -976,7 +977,8 @@ HierarchicalLODUtilities.TimeStamp=2020.12.06-23.07.09
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem0=/Game/FirstPersonBP/Maps/Paul
+MRUItem1=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings,
@@ -1509,8 +1511,8 @@ GeneralProjectSettings=True
 InputSettings=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Widgets/Nombre_Dash
-MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem0=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem1=/Game/FirstPersonBP/Widgets/Nombre_Dash
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
