Ini + Map Pierre

--- a/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -138,7 +138,6 @@ LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=360.000
@@ -1601,4 +1600,18 @@ OnlyBuildVisibility=False
 
 [MessageLog]
 LastLogListing=MapCheck
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+bSCCUseGlobalSettings=False
+bAutomaticallyCheckoutOnAssetModification=False
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=False
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
 
