Added dash Sound

--- a/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -131,14 +131,13 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Maps
 
 [EditorStartup]
 LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=360.000
@@ -163,7 +162,7 @@ UNR=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/FirstPersonBP/M
 BRUSH=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/
 FBX=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/
 FBXAnim=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/
-GenericImport=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/
+GenericImport=C:/Users/paulp/Music/Dash Sound Effec.wav
 GenericExport=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/
 GenericOpen=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/
 GenericSave=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/
