--- a/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -131,7 +131,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Maps
+ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
@@ -139,13 +139,13 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/FirstPersonBP/Maps/Paul
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=360.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -165,7 +165,7 @@ UNR=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/FirstPersonBP/M
 BRUSH=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/
 FBX=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/
 FBXAnim=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/
-GenericImport=C:/Users/paulp/Music/Dash Sound Effec.wav
+GenericImport=C:/Users/paulp/Pictures/Montage PS/Dash Particules.png
 GenericExport=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/
 GenericOpen=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/
 GenericSave=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/
@@ -977,6 +977,10 @@ SequencerWidgets.TimeStamp=2020.12.06-23.07.25
 SequencerWidgets.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2020.12.06-23.07.09
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+Cascade.TimeStamp=2020.12.06-23.06.59
+Cascade.LastCompileMethod=Unknown
+DistCurveEditor.TimeStamp=2020.12.06-23.07.03
+DistCurveEditor.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/FirstPersonBP/Maps/Paul
@@ -1061,7 +1065,7 @@ CameraComponent=CameraComponent.PostProcess.Lens|Mobile Depth of Field,CameraCom
 CapsuleComponent=CapsuleComponent.Physics.ConstraintsGroup,
 SceneComponent=CameraComponent.PostProcess.Lens|Mobile Depth of Field,CameraComponent.PostProcess.Lens|BloomAdvanced,CameraComponent.PostProcess.Lens|Bloom,CameraComponent.PostProcess.Lens|Exposure,CameraComponent.PostProcess.Lens|Chromatic Aberration,CameraComponent.PostProcess.Lens|Camera,CameraComponent.PostProcess.Lens|Depth of Field,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Rendering Features|Ambient OcclusionAdvanced,CameraComponent.PostProcess.Rendering Features|Ambient Occlusion,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Color Grading|Misc,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Rendering Features|Screen Space Reflections,CameraComponent.PostProcess.Rendering Features|PathTracing,CameraComponent.PostProcess.Color Grading|Global,CameraComponent.PostProcess.Color Grading|Shadows,CameraComponent.PostProcess.Color Grading|Midtones,CameraComponent.PostProcess.Color Grading|Highlights,CameraComponent.PostProcess.Rendering Features|Light Propagation VolumeAdvanced,CameraComponent.PostProcess.Rendering Features|Light Propagation Volume,
 K2Node_VariableGet=CameraComponent.PostProcess.Lens|Mobile Depth of Field,CameraComponent.PostProcess.Lens|BloomAdvanced,CameraComponent.PostProcess.Lens|Bloom,CameraComponent.PostProcess.Lens|Exposure,CameraComponent.PostProcess.Lens|Chromatic Aberration,CameraComponent.PostProcess.Lens|Camera,CameraComponent.PostProcess.Lens|Depth of Field,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Rendering Features|Ambient OcclusionAdvanced,CameraComponent.PostProcess.Rendering Features|Ambient Occlusion,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Color Grading|Misc,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Rendering Features|Screen Space Reflections,CameraComponent.PostProcess.Rendering Features|PathTracing,CameraComponent.PostProcess.Color Grading|Global,CameraComponent.PostProcess.Color Grading|Shadows,CameraComponent.PostProcess.Color Grading|Midtones,CameraComponent.PostProcess.Color Grading|Highlights,CameraComponent.PostProcess.Rendering Features|Light Propagation VolumeAdvanced,CameraComponent.PostProcess.Rendering Features|Light Propagation Volume,
-FirstPersonCharacter_C=CameraComponent.PostProcess.Lens|Mobile Depth of Field,CameraComponent.PostProcess.Lens|BloomAdvanced,CameraComponent.PostProcess.Lens|Bloom,CameraComponent.PostProcess.Lens|Exposure,CameraComponent.PostProcess.Lens|Chromatic Aberration,CameraComponent.PostProcess.Lens|Camera,CameraComponent.PostProcess.Lens|Depth of Field,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Rendering Features|Ambient OcclusionAdvanced,CameraComponent.PostProcess.Rendering Features|Ambient Occlusion,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Color Grading|Misc,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Rendering Features|Screen Space Reflections,CameraComponent.PostProcess.Rendering Features|PathTracing,CameraComponent.PostProcess.Color Grading|Global,CameraComponent.PostProcess.Color Grading|Shadows,CameraComponent.PostProcess.Color Grading|Midtones,CameraComponent.PostProcess.Color Grading|Highlights,CameraComponent.PostProcess.Rendering Features|Light Propagation VolumeAdvanced,CameraComponent.PostProcess.Rendering Features|Light Propagation Volume,
+FirstPersonCharacter_C=
 PropertyWrapper=CameraComponent.PostProcess.Lens|Mobile Depth of Field,CameraComponent.PostProcess.Lens|BloomAdvanced,CameraComponent.PostProcess.Lens|Bloom,CameraComponent.PostProcess.Lens|Exposure,CameraComponent.PostProcess.Lens|Chromatic Aberration,CameraComponent.PostProcess.Lens|Camera,CameraComponent.PostProcess.Lens|Depth of Field,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Rendering Features|Ambient OcclusionAdvanced,CameraComponent.PostProcess.Rendering Features|Ambient Occlusion,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Color Grading|Misc,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Rendering Features|Screen Space Reflections,CameraComponent.PostProcess.Rendering Features|PathTracing,CameraComponent.PostProcess.Color Grading|Global,CameraComponent.PostProcess.Color Grading|Shadows,CameraComponent.PostProcess.Color Grading|Midtones,CameraComponent.PostProcess.Color Grading|Highlights,CameraComponent.PostProcess.Rendering Features|Light Propagation VolumeAdvanced,CameraComponent.PostProcess.Rendering Features|Light Propagation Volume,
 
 [DetailCategories]
