Changed Life into Shield, Added Life, Polish Ui

--- a/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -131,21 +131,21 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
+ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Widgets
 
 [EditorStartup]
 LastLevel=/Game/FirstPersonBP/Maps/Paul
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
+OpenAssetsAtExit=/Game/FirstPersonBP/Widgets/Ui.Ui
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=360.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -165,7 +165,7 @@ UNR=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/FirstPersonBP/M
 BRUSH=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/
 FBX=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/
 FBXAnim=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/
-GenericImport=C:/Users/paulp/Pictures/Montage PS/Dash Particules.png
+GenericImport=C:/Users/paulp/Pictures/Montage PS/BarreDash.png
 GenericExport=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/
 GenericOpen=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/
 GenericSave=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/
@@ -981,6 +981,8 @@ Cascade.TimeStamp=2020.12.06-23.06.59
 Cascade.LastCompileMethod=Unknown
 DistCurveEditor.TimeStamp=2020.12.06-23.07.03
 DistCurveEditor.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2020.12.06-23.07.29
+TextureEditor.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/FirstPersonBP/Maps/Paul
@@ -1061,12 +1063,16 @@ TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings.Dash,InputS
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings,
 ParticleModuleColorOverLife=ParticleModuleColorOverLife.Color.Distribution,ParticleModuleColorOverLife.Color.ConstantCurve,ParticleModuleColorOverLife.Color.Points,
-CameraComponent=CameraComponent.PostProcess.Lens|Mobile Depth of Field,CameraComponent.PostProcess.Lens|BloomAdvanced,CameraComponent.PostProcess.Lens|Bloom,CameraComponent.PostProcess.Lens|Exposure,CameraComponent.PostProcess.Lens|Chromatic Aberration,CameraComponent.PostProcess.Lens|Camera,CameraComponent.PostProcess.Lens|Depth of Field,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Rendering Features|Ambient OcclusionAdvanced,CameraComponent.PostProcess.Rendering Features|Ambient Occlusion,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Color Grading|Misc,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Rendering Features|Screen Space Reflections,CameraComponent.PostProcess.Rendering Features|PathTracing,CameraComponent.PostProcess.Color Grading|Global,CameraComponent.PostProcess.Color Grading|Shadows,CameraComponent.PostProcess.Color Grading|Midtones,CameraComponent.PostProcess.Color Grading|Highlights,CameraComponent.PostProcess.Rendering Features|Light Propagation VolumeAdvanced,CameraComponent.PostProcess.Rendering Features|Light Propagation Volume,
+CameraComponent=CameraComponent.PostProcess.Lens
 CapsuleComponent=CapsuleComponent.Physics.ConstraintsGroup,
-SceneComponent=CameraComponent.PostProcess.Lens|Mobile Depth of Field,CameraComponent.PostProcess.Lens|BloomAdvanced,CameraComponent.PostProcess.Lens|Bloom,CameraComponent.PostProcess.Lens|Exposure,CameraComponent.PostProcess.Lens|Chromatic Aberration,CameraComponent.PostProcess.Lens|Camera,CameraComponent.PostProcess.Lens|Depth of Field,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Rendering Features|Ambient OcclusionAdvanced,CameraComponent.PostProcess.Rendering Features|Ambient Occlusion,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Color Grading|Misc,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Rendering Features|Screen Space Reflections,CameraComponent.PostProcess.Rendering Features|PathTracing,CameraComponent.PostProcess.Color Grading|Global,CameraComponent.PostProcess.Color Grading|Shadows,CameraComponent.PostProcess.Color Grading|Midtones,CameraComponent.PostProcess.Color Grading|Highlights,CameraComponent.PostProcess.Rendering Features|Light Propagation VolumeAdvanced,CameraComponent.PostProcess.Rendering Features|Light Propagation Volume,
-K2Node_VariableGet=CameraComponent.PostProcess.Lens|Mobile Depth of Field,CameraComponent.PostProcess.Lens|BloomAdvanced,CameraComponent.PostProcess.Lens|Bloom,CameraComponent.PostProcess.Lens|Exposure,CameraComponent.PostProcess.Lens|Chromatic Aberration,CameraComponent.PostProcess.Lens|Camera,CameraComponent.PostProcess.Lens|Depth of Field,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Rendering Features|Ambient OcclusionAdvanced,CameraComponent.PostProcess.Rendering Features|Ambient Occlusion,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Color Grading|Misc,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Rendering Features|Screen Space Reflections,CameraComponent.PostProcess.Rendering Features|PathTracing,CameraComponent.PostProcess.Color Grading|Global,CameraComponent.PostProcess.Color Grading|Shadows,CameraComponent.PostProcess.Color Grading|Midtones,CameraComponent.PostProcess.Color Grading|Highlights,CameraComponent.PostProcess.Rendering Features|Light Propagation VolumeAdvanced,CameraComponent.PostProcess.Rendering Features|Light Propagation Volume,
-FirstPersonCharacter_C=
-PropertyWrapper=CameraComponent.PostProcess.Lens|Mobile Depth of Field,CameraComponent.PostProcess.Lens|BloomAdvanced,CameraComponent.PostProcess.Lens|Bloom,CameraComponent.PostProcess.Lens|Exposure,CameraComponent.PostProcess.Lens|Chromatic Aberration,CameraComponent.PostProcess.Lens|Camera,CameraComponent.PostProcess.Lens|Depth of Field,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Rendering Features|Ambient OcclusionAdvanced,CameraComponent.PostProcess.Rendering Features|Ambient Occlusion,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Color Grading|Misc,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Rendering Features|Screen Space Reflections,CameraComponent.PostProcess.Rendering Features|PathTracing,CameraComponent.PostProcess.Color Grading|Global,CameraComponent.PostProcess.Color Grading|Shadows,CameraComponent.PostProcess.Color Grading|Midtones,CameraComponent.PostProcess.Color Grading|Highlights,CameraComponent.PostProcess.Rendering Features|Light Propagation VolumeAdvanced,CameraComponent.PostProcess.Rendering Features|Light Propagation Volume,
+SceneComponent=CameraComponent.PostProcess.Lens
+K2Node_VariableGet=CameraComponent.PostProcess.Lens,
+FirstPersonCharacter_C=CameraComponent.PostProcess.Lens,
+PropertyWrapper=CameraComponent.PostProcess.Lens,
+Nombre_Dash_C=CameraComponent.PostProcess.Lens,
+K2Node_VariableSet=CameraComponent.PostProcess.Lens,
+Ui_C=CameraComponent.PostProcess.Lens,
+MovementComponent=CameraComponent.PostProcess.Lens,
 
 [DetailCategories]
 FirstPersonCharacter_C.TransformCommon=True
@@ -1610,6 +1616,90 @@ CapsuleComponent.HLOD=True
 CapsuleComponent.Mobile=True
 FirstPersonCharacter_C.Rotation Camera=True
 FirstPersonCharacter_C.Dash=True
+FirstPersonHUD_C.Tick=True
+FirstPersonHUD_C.Default=True
+FirstPersonHUD_C.HUD=True
+FirstPersonHUD_C.Collision=True
+FirstPersonGameMode_C.Tick=True
+FirstPersonGameMode_C.Classes=True
+FirstPersonGameMode_C.Game=True
+FirstPersonGameMode_C.GameMode=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+Zone_Damage_C.Tick=True
+Zone_Damage_C.Replication=True
+Zone_Damage_C.Rendering=True
+Zone_Damage_C.Collision=True
+Zone_Damage_C.Actor=True
+Zone_Damage_C.Input=True
+Widget.Accessibility=True
+Widget.Behavior=True
+Widget.Render Transform=True
+Widget.Performance=True
+Widget.Clipping=True
+Widget.Navigation=True
+Widget.Localization=True
+Ui_C.Default=True
+Ui_C.Appearance=True
+Ui_C.Designer=True
+Ui_C.Input=True
+Ui_C.Interaction=True
+Ui_C.Performance=True
+Ui_C.Layout=True
+Ui_C.Behavior=True
+Ui_C.Render Transform=True
+Ui_C.Accessibility=True
+Ui_C.Clipping=True
+Ui_C.Navigation=True
+Ui_C.Localization=True
+FirstPersonCharacter_C.Vie=True
+CharacterMovementComponent.Variable=True
+CharacterMovementComponent.Sockets=True
+CharacterMovementComponent.Character Movement (General Settings)=True
+CharacterMovementComponent.Character Movement: Walking=True
+CharacterMovementComponent.Character Movement: Jumping / Falling=True
+CharacterMovementComponent.Character Movement (Networking)=True
+CharacterMovementComponent.Character Movement: Swimming=True
+CharacterMovementComponent.Character Movement: Flying=True
+CharacterMovementComponent.Character Movement: Custom Movement=True
+CharacterMovementComponent.Character Movement (Rotation Settings)=True
+CharacterMovementComponent.Character Movement: Physics Interaction=True
+CharacterMovementComponent.Character Movement=True
+CharacterMovementComponent.Character Movement: Avoidance=True
+CharacterMovementComponent.RootMotion=True
+CharacterMovementComponent.Character Movement: NavMesh Movement=True
+CharacterMovementComponent.NavMovement=True
+CharacterMovementComponent.Velocity=True
+CharacterMovementComponent.PlanarMovement=True
+CharacterMovementComponent.MovementComponent=True
+CharacterMovementComponent.Tags=True
+CharacterMovementComponent.ComponentReplication=True
+CharacterMovementComponent.Activation=True
+CharacterMovementComponent.Cooking=True
+CharacterMovementComponent.Events=True
+Texture2D.Compression=True
+Texture2D.Texture=True
+Texture2D.File Path=True
+Texture2D.Adjustments=True
+Texture2D.LevelOfDetail=True
+Texture2D.Compositing=True
+Widget.Layout=True
+FirstPersonCharacter_C.Shield=True
+WorldSettings.PrecomputedVisibility=True
+WorldSettings.GameMode=True
+WorldSettings.Lightmass=True
+WorldSettings.World=True
+WorldSettings.Physics=True
+WorldSettings.Broadphase=True
+WorldSettings.VR=True
+WorldSettings.Rendering=True
+WorldSettings.Audio=True
+WorldSettings.LODSystem=True
+WorldSettings.Tick=True
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1617,26 +1707,39 @@ GeneralProjectSettings=True
 InputSettings=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AC_CameraSway
+MRUItem0=/Game/FirstPersonBP/Widgets/Ui
 MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem2=/Game/Particules/Dash_Particules
-MRUItem3=/Game/Particules/NewParticleSystem
-MRUItem4=/Game/Materials/Dash_Particules
-MRUItem5=/Game/FirstPersonBP/Maps/Paul
-MRUItem6=/Game/FirstPersonBP/Maps/Pierre
-MRUItem7=/Game/FirstPersonBP/Widgets/Nombre_Dash
+MRUItem2=/Game/FirstPersonBP/Widgets/Image/BarreShield
+MRUItem3=/Game/FirstPersonBP/Maps/Paul
+MRUItem4=/Game/FirstPersonBP/Widgets/Image/BarreVie
+MRUItem5=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem6=/Game/FirstPersonBP/Widgets/Nombre_Dash
+MRUItem7=/Game/FirstPersonBP/Widgets/Shield
+MRUItem8=/Game/FirstPersonBP/Blueprints/Zone_Damage
+MRUItem9=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
+MRUItem10=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
+MRUItem11=/Game/FirstPersonBP/Maps/Pierre
+MRUItem12=/Game/AC_CameraSway
+MRUItem13=/Game/Particules/Dash_Particules
+MRUItem14=/Game/Particules/NewParticleSystem
+MRUItem15=/Game/Materials/Dash_Particules
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
 /Game/Particules/Dash_Particules.Dash_Particules=1
 /Game/Materials/Dash_Particules.Dash_Particules=1
+/Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode=1
+/Game/FirstPersonBP/Blueprints/FirstPersonHUD.FirstPersonHUD=1
+/Engine/EditorBlueprintResources/StandardMacros.StandardMacros=1
+/Game/FirstPersonBP/Widgets/Ui.Ui=1
+/Game/FirstPersonBP/Widgets/Image/BarreShield.BarreShield=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[28]\" "
-Object=
+Object="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstList.BurstList[0]\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModuleSpawnBase="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstList.BurstList[0]\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModule="\"Object.Size.StartSize.Distribution\" "
@@ -1660,6 +1763,15 @@ Pawn=
 CapsuleComponent="\"Object.Collision.BodyInstance\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" "
+ProgressBar="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+Widget="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+Visual="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+CanvasPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+PanelWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+TextBlock="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+Ui_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+UserWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 
 [WidgetTemplatesExpanded]
 Editor=False
@@ -1673,6 +1785,7 @@ Special Effects=False
 Synth=False
 User Created=False
 Advanced=False
+Common=False
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1851,4 +1964,8 @@ bPlatformUsed[48]=0
 bMaterialQualityUsed[0]=0
 bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
+
+[SuppressableDialogs]
+ChangeVariableType_Warning=False
+DeleteVariableInUse_Warning=False
 
