Patched Shield Regen, Moved Shield modification in Actor

--- a/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -133,14 +133,13 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Widgets
+ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Maps
 
 [EditorStartup]
 LastLevel=/Game/FirstPersonBP/Maps/Paul
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/FirstPersonBP/Widgets/Ui.Ui
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=360.000
@@ -1072,7 +1071,9 @@ PropertyWrapper=CameraComponent.PostProcess.Lens,
 Nombre_Dash_C=CameraComponent.PostProcess.Lens,
 K2Node_VariableSet=CameraComponent.PostProcess.Lens,
 Ui_C=CameraComponent.PostProcess.Lens,
-MovementComponent=CameraComponent.PostProcess.Lens,
+MovementComponent=
+Zone_Damage_C=
+BoxComponent=BoxComponent.Collision.Collision,
 
 [DetailCategories]
 FirstPersonCharacter_C.TransformCommon=True
@@ -1700,6 +1701,48 @@ WorldSettings.Rendering=True
 WorldSettings.Audio=True
 WorldSettings.LODSystem=True
 WorldSettings.Tick=True
+Zone_Damage_C.TransformCommon=True
+BoxComponent.Variable=True
+BoxComponent.TransformCommon=True
+BoxComponent.Sockets=True
+BoxComponent.Shape=True
+BoxComponent.Navigation=True
+BoxComponent.Rendering=True
+BoxComponent.Physics=True
+BoxComponent.Collision=True
+BoxComponent.Tags=True
+BoxComponent.ComponentReplication=True
+BoxComponent.Cooking=True
+BoxComponent.Events=True
+PropertyWrapper.Events=True
+K2Node_VariableSet.Events=True
+PostProcessVolume.TransformCommon=True
+PostProcessVolume.Lens=True
+PostProcessVolume.Color Grading=True
+PostProcessVolume.Film=True
+PostProcessVolume.Rendering Features=True
+PostProcessVolume.PostProcessVolumeSettings=True
+PostProcessVolume.Replication=True
+PostProcessVolume.BrushSettings=True
+PostProcessVolume.Actor=True
+LightmassImportanceVolume.TransformCommon=True
+LightmassImportanceVolume.Replication=True
+LightmassImportanceVolume.BrushSettings=True
+LightmassImportanceVolume.Actor=True
+Volume.TransformCommon=True
+Volume.Replication=True
+Volume.BrushSettings=True
+Volume.Actor=True
+Actor.TransformCommon=True
+Actor.Rendering=True
+Actor.Replication=True
+Actor.Collision=True
+Actor.Actor=True
+FirstPersonCharacter_C.Zone Combat=True
+Pierre_C.Tick=True
+Pierre_C.Replication=True
+Pierre_C.Actor=True
+Pierre_C.Input=True
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1707,18 +1750,18 @@ GeneralProjectSettings=True
 InputSettings=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Widgets/Ui
-MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem2=/Game/FirstPersonBP/Widgets/Image/BarreShield
-MRUItem3=/Game/FirstPersonBP/Maps/Paul
-MRUItem4=/Game/FirstPersonBP/Widgets/Image/BarreVie
-MRUItem5=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem6=/Game/FirstPersonBP/Widgets/Nombre_Dash
-MRUItem7=/Game/FirstPersonBP/Widgets/Shield
-MRUItem8=/Game/FirstPersonBP/Blueprints/Zone_Damage
-MRUItem9=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
-MRUItem10=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
-MRUItem11=/Game/FirstPersonBP/Maps/Pierre
+MRUItem0=/Game/FirstPersonBP/Maps/Paul
+MRUItem1=/Game/FirstPersonBP/Maps/Pierre
+MRUItem2=/Game/FirstPersonBP/Widgets/Ui
+MRUItem3=/Game/FirstPersonBP/Blueprints/Zone_Damage
+MRUItem4=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem5=/Game/FirstPersonBP/Widgets/Image/BarreShield
+MRUItem6=/Game/FirstPersonBP/Widgets/Image/BarreVie
+MRUItem7=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem8=/Game/FirstPersonBP/Widgets/Nombre_Dash
+MRUItem9=/Game/FirstPersonBP/Widgets/Shield
+MRUItem10=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
+MRUItem11=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
 MRUItem12=/Game/AC_CameraSway
 MRUItem13=/Game/Particules/Dash_Particules
 MRUItem14=/Game/Particules/NewParticleSystem
@@ -1733,13 +1776,15 @@ MRUItem15=/Game/Materials/Dash_Particules
 /Engine/EditorBlueprintResources/StandardMacros.StandardMacros=1
 /Game/FirstPersonBP/Widgets/Ui.Ui=1
 /Game/FirstPersonBP/Widgets/Image/BarreShield.BarreShield=1
+/Game/FirstPersonBP/Blueprints/Zone_Damage.Zone_Damage=1
+/Game/FirstPersonBP/Maps/Pierre.Pierre:PersistentLevel.Pierre=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[28]\" "
-Object="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+Object=
 ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstList.BurstList[0]\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModuleSpawnBase="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstList.BurstList[0]\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModule="\"Object.Size.StartSize.Distribution\" "
@@ -1755,23 +1800,27 @@ ParticleModuleLocationBase="\"Object.Location.StartLocation\" \"Object.Location.
 ParticleModuleColorOverLife="\"Object.Color.ColorOverLife\" \"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
 ParticleModuleColorBase="\"Object.Color.ColorOverLife\" \"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.SceneColorTint\" \"Object.PostProcess.PostProcessSettings.Bloom1Tint\" \"Object.PostProcess.PostProcessSettings.Bloom2Tint\" \"Object.PostProcess.PostProcessSettings.Bloom3Tint\" \"Object.PostProcess.PostProcessSettings.Bloom4Tint\" \"Object.PostProcess.PostProcessSettings.Bloom5Tint\" \"Object.PostProcess.PostProcessSettings.Bloom6Tint\" \"Object.PostProcess.PostProcessSettings.BloomDirtMaskTint\" \"Object.PostProcess.PostProcessSettings.AmbientCubemapTint\" \"Object.PostProcess.PostProcessSettings.LensFlareTint\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcess.PostProcessSettings.IndirectLightingColor\" \"Object.PostProcess.PostProcessSettings.WeightedBlendables\" "
-SceneComponent=
+SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
 ActorComponent=
 FirstPersonCharacter_C=
 Character=
 Pawn=
 CapsuleComponent="\"Object.Collision.BodyInstance\" "
-ShapeComponent="\"Object.Collision.BodyInstance\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" "
+ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
 ProgressBar="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
-Widget="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
-Visual="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+Widget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+Visual="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 PanelWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 TextBlock="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 Ui_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 UserWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
+PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [WidgetTemplatesExpanded]
 Editor=False
@@ -1850,7 +1899,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=PIE
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
@@ -1902,6 +1951,7 @@ FloorScale=1.000000
 FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/FirstPersonBP/Blueprints/Zone_Damage.Zone_Damage;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Particules/Dash_Particules.Dash_Particules;
 
