--- a/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -136,14 +136,16 @@ AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Maps
 
 [EditorStartup]
-LastLevel=/Game/FirstPersonBP/Maps/Paul
+LastLevel=/Game/FirstPersonBP/Maps/Pierre
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/UI/MenuPause.MenuPause
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=360.000
-WindowSize=X=1280.000 Y=720.000
+WindowSize=X=1281.600 Y=721.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -984,9 +986,10 @@ TextureEditor.TimeStamp=2020.12.06-23.07.29
 TextureEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/FirstPersonBP/Maps/Paul
-MRUItem1=/Game/FirstPersonBP/Maps/Pierre
-MRUItem2=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem0=/Game/FirstPersonBP/Maps/Pierre
+MRUItem1=/Game/FirstPersonBP/Maps/MainMenu
+MRUItem2=/Game/FirstPersonBP/Maps/Paul
+MRUItem3=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause,
@@ -1055,12 +1058,12 @@ MovieRenderPipelineProjectSettings=InputSettings.Bindings.ActionMappings.Dash,In
 NiagaraSettings=InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause,
 NiagaraEditorSettings=InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause,
 OculusHMDRuntimeSettings=InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings,
-PaperRuntimeSettings=InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings,
-SteamVREditorSettings=InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings,
-TcpMessagingSettings=InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings,
-TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings,
-UdpMessagingSettings=InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings,
-WmfMediaSettings=InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings,
+PaperRuntimeSettings=InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause,
+SteamVREditorSettings=InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause,
+TcpMessagingSettings=InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause,
+TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause,
+UdpMessagingSettings=InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause,
+WmfMediaSettings=InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause,
 ParticleModuleColorOverLife=ParticleModuleColorOverLife.Color.Distribution,ParticleModuleColorOverLife.Color.ConstantCurve,ParticleModuleColorOverLife.Color.Points,
 CameraComponent=CameraComponent.PostProcess.Lens
 CapsuleComponent=CapsuleComponent.Physics.ConstraintsGroup,
@@ -1074,6 +1077,9 @@ Ui_C=CameraComponent.PostProcess.Lens,
 MovementComponent=
 Zone_Damage_C=
 BoxComponent=BoxComponent.Collision.Collision,
+MenuPause_C=
+PlayerController=CameraComponent.PostProcess.Lens,
+MainMenu_C=
 
 [DetailCategories]
 FirstPersonCharacter_C.TransformCommon=True
@@ -1743,6 +1749,33 @@ Pierre_C.Tick=True
 Pierre_C.Replication=True
 Pierre_C.Actor=True
 Pierre_C.Input=True
+HorizontalBox.Layout=True
+HorizontalBox.Behavior=True
+HorizontalBox.Accessibility=True
+HorizontalBox.Render Transform=True
+HorizontalBox.Performance=True
+HorizontalBox.Clipping=True
+HorizontalBox.Navigation=True
+HorizontalBox.Localization=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Accessibility=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Clipping=True
+Button.Navigation=True
+Button.Localization=True
+Button.Events=True
+VerticalBox.Layout=True
+VerticalBox.Behavior=True
+VerticalBox.Accessibility=True
+VerticalBox.Render Transform=True
+VerticalBox.Performance=True
+VerticalBox.Clipping=True
+VerticalBox.Navigation=True
+VerticalBox.Localization=True
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1751,22 +1784,25 @@ InputSettings=True
 EditorStyleSettings=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Maps/Paul
+MRUItem0=/Game/UI/MainMenu
 MRUItem1=/Game/FirstPersonBP/Maps/Pierre
-MRUItem2=/Game/FirstPersonBP/Widgets/Ui
-MRUItem3=/Game/FirstPersonBP/Blueprints/Zone_Damage
-MRUItem4=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem5=/Game/FirstPersonBP/Widgets/Image/BarreShield
-MRUItem6=/Game/FirstPersonBP/Widgets/Image/BarreVie
-MRUItem7=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem8=/Game/FirstPersonBP/Widgets/Nombre_Dash
-MRUItem9=/Game/FirstPersonBP/Widgets/Shield
-MRUItem10=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
-MRUItem11=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
-MRUItem12=/Game/AC_CameraSway
-MRUItem13=/Game/Particules/Dash_Particules
-MRUItem14=/Game/Particules/NewParticleSystem
-MRUItem15=/Game/Materials/Dash_Particules
+MRUItem2=/Game/FirstPersonBP/Maps/MainMenu
+MRUItem3=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem4=/Game/UI/MenuPause
+MRUItem5=/Game/FirstPersonBP/Maps/Paul
+MRUItem6=/Game/FirstPersonBP/Widgets/Ui
+MRUItem7=/Game/FirstPersonBP/Blueprints/Zone_Damage
+MRUItem8=/Game/FirstPersonBP/Widgets/Image/BarreShield
+MRUItem9=/Game/FirstPersonBP/Widgets/Image/BarreVie
+MRUItem10=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem11=/Game/FirstPersonBP/Widgets/Nombre_Dash
+MRUItem12=/Game/FirstPersonBP/Widgets/Shield
+MRUItem13=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
+MRUItem14=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
+MRUItem15=/Game/AC_CameraSway
+MRUItem16=/Game/Particules/Dash_Particules
+MRUItem17=/Game/Particules/NewParticleSystem
+MRUItem18=/Game/Materials/Dash_Particules
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
@@ -1779,6 +1815,7 @@ MRUItem15=/Game/Materials/Dash_Particules
 /Game/FirstPersonBP/Widgets/Image/BarreShield.BarreShield=1
 /Game/FirstPersonBP/Blueprints/Zone_Damage.Zone_Damage=1
 /Game/FirstPersonBP/Maps/Pierre.Pierre:PersistentLevel.Pierre=1
+/Game/UI/MainMenu.MainMenu=0
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -1810,18 +1847,22 @@ CapsuleComponent="\"Object.Collision.BodyInstance\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
 ProgressBar="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
-Widget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
-Visual="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
-PanelWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
-TextBlock="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
-TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+PanelWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 Ui_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 UserWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+HorizontalBox="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+Button="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+ContentWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+VerticalBox="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 
 [WidgetTemplatesExpanded]
 Editor=False
@@ -2019,4 +2060,8 @@ bMaterialQualityUsed[2]=0
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
 DeleteVariableInUse_Warning=False
+
+[WorldBrowser]
+DisplayPaths=False
+DisplayActorsCount=False
 
